--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
-apply plugin: 'distribution'
+plugins {
+    id 'distribution'
+}
 
 subprojects {
     version '1.0-SNAPSHOT'
@@ -32,8 +34,4 @@ distributions.main.contents {
     into('3dcitydb') {
         from "${project('test-ade-citydb').projectDir}/resources/3dcitydb"
     }
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.7'
 }
