--- a/test-ade-citydb/build.gradle
+++ b/test-ade-citydb/build.gradle
@@ -2,5 +2,5 @@ group 'org.citydb.ade'
 
 dependencies {
     compile project(':test-ade-citygml4j')
-    compile 'org.citydb:impexp-client:4.0.0-pre.20180828.1054'
+    compile 'org.citydb:impexp-client:4.0.0'
 }
