--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ subprojects {
             url 'https://dl.bintray.com/3dcitydb/maven'
         }
         maven {
-            url 'http://download.osgeo.org/webdav/geotools'
+            url 'https://repo.osgeo.org/repository/release'
         }
         jcenter()
     }
