updated to Gradle 6.6.1

--- a/test-ade-citydb/build.gradle
+++ b/test-ade-citydb/build.gradle
@@ -1,6 +1,6 @@
 group 'org.citydb.ade'
 
 dependencies {
-    compile project(':test-ade-citygml4j')
-    compile 'org.citydb:impexp-client:4.3.0-b20200922.1940'
+    implementation project(':test-ade-citygml4j')
+    api 'org.citydb:impexp-client:4.3.0-b20200922.1940'
 }
