--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,12 @@ subprojects {
     apply plugin: 'java-library'
 
     java {
-        sourceCompatibility = JavaVersion.VERSION_1_8
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(11)
+        }
+        compileJava {
+            options.release = 8
+        }
     }
 
     repositories {
