--- a/test-ade-citydb/build.gradle
+++ b/test-ade-citydb/build.gradle
@@ -2,5 +2,5 @@ group 'org.citydb.ade'
 
 dependencies {
     implementation project(':test-ade-citygml4j')
-    api 'org.citydb:impexp-client-gui:4.4.0-SNAPSHOT'
+    api 'org.citydb:impexp-client-gui:5.0.0'
 }
